[project]
name = "ray-fiftyone"
version = "0.1.0"
description = "Ray Data integration for FiftyOne datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # core
    "fiftyone>=1.10.0",
    "pyarrow>=22.0.0",
    "ray[data]>=2.52.1",

    # ml
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.57.0",
    "pillow>=10.0.0",
    "timm>=1.0.22",

    # remote storage
    "s3fs>=2024.0.0",      # AWS S3 support
    "gcsfs>=2024.0.0",     # Google Cloud Storage support
    "adlfs>=2024.0.0",     # Azure Blob Storage support
    "fsspec>=2024.0.0",    # Unified filesystem interface
    "requests>=2.31.0",    # HTTP/HTTPS image loading

    # tests
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",

    # linting
    "pre-commit>=4.5.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["ray_fiftyone"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
